--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,22 +8,45 @@
 </head>
 
 <body>
+
+<div>
+<nav>
+	<a class="navlinks" href="#">Popular</a>
+	<a class="navlinks" href="#">Genre</a>
+	<a class="navlinks" href="#">Writers</a>
+</nav>
+</div>
+
+<header>
 <h1>Audible Suitcase</h1>
-<p id="slogan"> Where music meets literature.</p>
+</header>
 
-<img src="images/music09.jpg">
+<section>
+<div>
+<img src="/images/turn_on_the_bright_lights.jpg">
+<h3>From The Head Of a Psychotic Chef</h3>
+<p>The only way music can become known is if people share it widely, but because what I’ve made comes from catharsis it tends to resonate with catharsis, and catharsis is usually a private thing that is not easily shared.</p>
 
-<p>Music means so much to others due its reminiscent nature. The variables as to why music is so experience driven are endless: The jam from the confused teenage days, a love song that relentlessly reminds of the ex-girlfriend, the background track that friends mingled to on the lake house that one special weekend, the coffee shop song that incomprehensibly made you think of someone or something.</p>
+<div>
+<img src="/images/hungry_ghost.jpg">
+<h3>The Korea Effect</h3>
+<p>There we were, taking an early train to finish whatever business we had on a random Monday morning. She opens up a book and I immediately put my headphones back on. This is what I do when I need to think.</p>
+</div>
 
-<ul>
+<div>
+<img src="/images/good_news_for_people_that_love_bad_news.jpg">
+<h3>How I Wish We Could Stay Gold</h3>
+<p>Mama let us borrow her truck for a celebratory spin. The dudes had asked me to dinner at the same old pizza place, but I had no time for those fools. It was me and the lady for the night. We had good things to share, and I wasn’t about to get cozy with a bunch of perspiring boys when I felt this on.
+</p>
+</div>
+</section>
 
-<li>Great music</li>
-<li>Great articles</li>
-<li>An enjoyable time</li>
 
-</ul>
-
+<footer>
 <p>Contact me<a href="mailto:josealberto1@mac.com"> here</a></p>
+<p id="slogan"> Where music meets literature.</p>
+</footer>
+
 
 </body>
 
