--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <section>
-<div>
+<div id=>
 <img src="images/turn_on_the_bright_lights.jpg">
 <h3>From The Head Of a Psychotic Chef</h3>
 <p>The only way music can become known is if people share it widely, but because what I’ve made comes from catharsis it tends to resonate with catharsis, and catharsis is usually a private thing that is not easily shared.</p>
